<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GetMySpot</string>
    <string name="author">Adrien Castanié x Quentin Pineau</string>
    <string name="promotion">ESEO 2019-2022</string>
    <string name="add_spot">Add Spot</string>
    <string name="home">Home</string>
    <string name="my_account">My account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="language">Language</string>
    <string name="time">11 mai 2021 15:51</string>
    <string name="battery">75 %</string>
    <string name="position">Angers</string>
    <string name="pressure">10 hPa</string>
    <string name="brightness">1000 lx</string>
    <string name="goToSpot">Go to this Spot</string>
    <string name="require_connection_title">Internet connection required</string>
    <string name="require_connection_message">You must be logged into your account to access this feature. Please log in.</string>
    <string name="log_in">Log in</string>
    <string name="cancel">cancel</string>
    <string name="password">Password</string>
    <string name="pseudo">Pseudo</string>
    <string name="create_account">Create account</string>
    <string name="connection">Connection</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="create_account_error_title">Create account error</string>
    <string name="create_account_error_message">This pseudo already exist. Please choose a other one and retry.</string>
    <string name="ok">OK</string>
    <string name="success">Success</string>
    <string name="connection_error_title">Connection error</string>
    <string name="connection_error_message">Pseudo or password is invalide. Please check them and retry.</string>
    <string name="new_spot">New Spot</string>
    <string name="gallery">Gallery</string>
    <string name="spot_image">Spot image</string>
    <string name="map_image">Map image</string>
    <string name="refresh">Refresh</string>
    <string name="dialog_title_permission">Permission</string>
    <string name="dialog_message_permission">You have to accept permission to use the service</string>
    <string name="refuse">Refuse</string>
    <string name="metter">m</string>
    <string name="mbar">mbar</string>
    <string name="lux">lux</string>
    <string name="pourcentage">%</string>
    <string name="add_spot_error_title">Add spot error</string>
    <string name="add_spot_erro_message">Server error, we can\'t add your spot now. Please retry later</string>
    <string name="require_internet_title">Internet error</string>
    <string name="require_internet_message">You currently do not have access to the internet. This application requires an internet connection to work. Please check your WIFI connection or activate your mobile data.</string>
    <string name="more">More</string>
    <string name="not_received">Not received</string>
    <string name="no_more_data">No more data</string>
    <string name="picture_profile_updated">Profile picture updated</string>
    <string name="picture_profile_not_updated">Profile picture not updated</string>
    <string name="picture_profile_not_exist">Profile picture not existed</string>
    <string name="unable_location">Unable to locate</string>
    <string name="select_image">Select image</string>
    <string name="error">Error</string>
    <string name="password_not_correct">Password not matching</string>
</resources>