<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/home">

    <fragment
        android:id="@+id/add_spot"
        android:name="com.eseo.getmyspot.view.main.fragments.AddSpotFragment"
        android:label="@string/add_spot" >
        <action
            android:id="@+id/action_add_spot_to_home"
            app:destination="@id/home" />
    </fragment>
    <fragment
        android:id="@+id/home"
        android:name="com.eseo.getmyspot.view.main.fragments.HomeFragment"
        android:label="@string/home" >
        <action
            android:id="@+id/action_home_to_my_account"
            app:destination="@id/my_account" />
        <action
            android:id="@+id/action_home_to_add_spot"
            app:destination="@id/add_spot" />
    </fragment>
    <fragment
        android:id="@+id/my_account"
        android:name="com.eseo.getmyspot.view.main.fragments.MyAccountFragment"
        android:label="@string/my_account" >
        <action
            android:id="@+id/action_my_account_to_home"
            app:destination="@id/home" />
    </fragment>

</navigation>
