<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".view.main.fragments.MyAccountFragment"
            android:paddingBottom="?attr/actionBarSize">

            <ImageView
                android:id="@+id/settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_settings_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/settings" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_picture"
                app:shapeAppearanceOverlay="@style/circle"
                app:strokeColor="@color/black"
                app:strokeWidth="1dp"
                android:src="@color/white"
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/settings"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pseudo"
                app:layout_constraintTop_toBottomOf="@id/profile_picture"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMySpots"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pseudo"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/more_data"
                android:text="@string/more"
                app:layout_constraintTop_toBottomOf="@id/rvMySpots"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.core.widget.NestedScrollView>